--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-quill": "^2.0.0"
+    "react-icons": "^4.7.1",
+    "react-quill": "^2.0.0",
+    "react-quilljs": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
