--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "flowbite": "^1.6.3",
@@ -22,7 +23,8 @@
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
-    "react-quilljs": "^1.3.3"
+    "react-quilljs": "^1.3.3",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
