--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
