--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "eslint-config-next": "13.1.6",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
+    "html-react-parser": "^3.0.8",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
-    "react-html-parser": "^2.0.2",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
