--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "flowbite": "^1.6.3",
+    "flowbite-datepicker": "^1.2.2",
     "flowbite-react": "^0.3.8",
     "html-react-parser": "^3.0.8",
     "moment": "^2.29.4",
